Done some changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>GIT touch 2</h1>
-	<p>New line here.</p>
+	<h1>GIT touch 3</h1>
+	<p>First line here.</p>
+	<p>Second line here.</p>
 </body>
 </html>
