start Git_touch_4

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="cp1251">
 	<title>Document</title>
 </head>
 <body>
-	<h1>GIT touch 3</h1>
-	<p>First line here.</p>
-	<p>Second line here.</p>
+	<h1>GIT touch 4</h1>
+	<p>Start line here.</p>
+	<div>Просьба проверить работоспособность сервиса.
+	Обратите внимание, что сервис считается принятым, если в течение 7
+	календарных дней с даты отправки в ваш адрес данного уведомлени вами не
+	будет предоставлен в Orange Business Services (ООО "Эквант") мотивированный
+	отказ в принятии сервиса.
+	</div>
+	<div>Основанием для отказа является несоответствие результатов инсталляционных и
+	иных работ условиям договора и бланка заказа.
+	Мотивированный отказ вы можете направить менеджеру по продажам или менеджеру
+	отдела управления сервисными проектами.
+	</div>
+	<div>Полную историю заказа, а также статус по другим заказам вы можете увидеть на
+	Customer Portal по адресу:https://portal.orange-business.ru
+	(пожалуйста, скопируйте адрес и вставьте его в адресную строку вашего
+	браузера).
+	</div>
+	<p>End line here.</p>
 </body>
 </html>
